adjusted story spacing, fixed arrow position on mobile, changed arrow character

--- a/css/custom.css
+++ b/css/custom.css
@@ -20,6 +20,7 @@ Updated: 4-2019
 }
 
 a {
+    cursor: pointer;
 
 }
 
